# MediaQuery

./: README.md  pyproject.toml
examples/mediaquery_example/: pyproject.toml
examples/mediaquery_example/src/: main.py
examples/mediaquerycontainer_example/: pyproject.toml
examples/mediaquerycontainer_example/src/: main.py
src/flutter/mediaquery/lib/: mediaquery.dart
src/flutter/mediaquery/lib/src/: create_control.dart  mediaquery.dart
src/flutter/mediaquerycontainer/lib/: mediaquerycontainer.dart
src/flutter/mediaquerycontainer/lib/src/: mediaquerycontainer.dart
src/mediaquery/: mediaquery.py
src/mediaquery.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mediaquerycontainer/: __init__.py  mediaquerycontainer.py
src/mediaquerycontainer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
